--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -103,6 +103,9 @@
       background-color: var(--colorShadeB);
       outline: none;
       margin: auto;
+      padding: 2px;
+      width: 110px;
+      height: 110px;
     }
     .avatar img{
       border-radius: 50%;
@@ -115,6 +118,26 @@
       cursor: pointer;
     }
 
+    #image-preview{
+      display: none;
+    }
+    #image-form {
+      width: 110px;
+      height: 110px;
+      background: url("https://imagizer.imageshack.com/v2/100x75q90/922/NtCrwx.png") center no-repeat;
+    }
+      #image-form:hover{
+        cursor: pointer;
+        background-color: var(--colorShadeB);
+      }
+      #addAvatar {
+        border-radius: 50%;
+        width: 110px;
+        height: 110px;
+        -webkit-appearance:none; 
+        position:relative;
+        opacity:0; 
+      }
   /*********************************************** button  ****************************************************/
 
   .big-button {
@@ -127,7 +150,7 @@
     border: 0;
     vertical-align: middle;
     text-decoration: none;
-    font-size: 1rem;
+    font-size: 15px;
       color:var(--colorShadeA);
     font-weight: 700;
     text-transform: uppercase;
@@ -234,7 +257,33 @@
     background: var(--colorShadeE);
     transform: translate(0, 0.375em);
   }
-
+    /*********************************************** intro/index.ejs/modals ****************************************************/
+    .modal-content{
+      color: white;
+      font-family: 'Retro';
+    }
+      .modal-header{
+        background-color: var(--backgroundColor);
+      }
+        .modal-header .close{
+          color: var(--colorShadeB);
+        }
+      .modal-body{
+        background-color: var(--colorShadeC);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+      }
+        .modal-body h4{
+          color: var(--colorShadeE);
+        }
+      .modal-footer{
+        background-color: var(--backgroundColor);
+      }
+        #reset{
+          color: var(--colorShadeB);
+        }
   /*********************************************** intro/select.ejs ****************************************************/
 
 #category-page{
