--- a/views/intro/coming.ejs
+++ b/views/intro/coming.ejs
@@ -1,5 +1,14 @@
 <%- include('../partials/header') %>
-    <h1>trivia</h1>
-    <a href="/games">See trivia questions</p>
-        <p>Coming Soon!</p>
+<div class="navbar"> 
+    <a href='/home' class="back">
+        <i class="fa fa-angle-left"></i>
+    </a>
+    <div class="menu">
+        <h1>OTrivia</h1>
+    </div>
+</div>
+<div id="comingSoon">
+    <img src="https://imagizer.imageshack.com/img922/4959/9KmxBn.gif">
+</div>
+
 <%- include('../partials/footer') %>
