--- a/views/intro/index.ejs
+++ b/views/intro/index.ejs
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+
 <%- include('../partials/header') %>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -31,11 +33,11 @@
           <div class="modal-body">
             <h4>Chill Mode</h4>
               <p>
-                We all need to chill sometimes. Chill Mode is where time doesn't matter and wrong answers don't cost you a point! Choose from the list of catagories. Attempt 20 questions. When you feel like it is time to reveal the right answers, click the show button. Reward yourself if you had it right, and if not, hey you learned something new today!
+                We all need to chill sometimes. Chill Mode is where time doesn't matter and wrong answers don't cost you a point! Choose from the list of catagories. Attempt 10 questions. When you feel like it is time to reveal the right answers, click the show button. Reward yourself if you had it right, and if not, hey you learned something new today!
               </p>
             <h4>Party of One</h4>
             <p>
-              Are you up for some challenge? Then you should join a Part of One! Choose from a list of catagories. Attempt to answer 20 question within three minute. And see if you can beat your previous scores. If you finish before time ends, you can hit the submit button as the same scores are differed by the time taken.   
+              Are you up for some challenge? Then you should join a Part of One! Choose from a list of catagories. Attempt to answer 10 question within 2 minutes. And see if you can beat your previous scores. If you finish before time ends, you can hit the submit button as the same scores are differed by the time taken.   
             </p>
             <h4>Join the Party (Coming soon!)</h4>
             <p>
@@ -60,11 +62,10 @@
             <h4 class="modal-title" id="user">Welcome User!</h4>
           </div>
           <div class="modal-body">
-            <h4>Scoreboard</h4>
-
+        
             <table>
               <tr>
-                <th>Score (Max 20)</th>
+                <th>Score (Max 10)</th>
                 <th>Time Taken</th>
               </tr>
               <tr class="table-scores">
