--- a/views/intro/select.ejs
+++ b/views/intro/select.ejs
@@ -1,6 +1,10 @@
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+
 <%- include('../partials/header') %>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+
 <%
 var imgArray = new Array();
 imgArray[0] = 'https://imagizer.imageshack.com/v2/150x100q90/923/RNgUKF.png';
@@ -65,7 +69,7 @@ imgArray[23] = 'https://imagizer.imageshack.com/v2/150x100q90/923/P8DCWW.png';
             <div class="modal-body">
               <h4>Chill Mode</h4>
                 <p>
-                  We all need to chill sometimes. Chill Mode is where time doesn't matter and wrong answers don't cost you a point! Choose from the list of catagories. Attempt 20 questions. When you feel like it is time to reveal the right answers, click the show button. Reward yourself if you had it right, and if not, hey you learned something new today!
+                  We all need to chill sometimes. Chill Mode is where time doesn't matter and wrong answers don't cost you a point! Choose from the list of catagories. Attempt 10 questions. When you feel like it is time to reveal the right answers, click the show button. Reward yourself if you had it right, and if not, hey you learned something new today!
                 </p>
               <h4>Party of One</h4>
               <p>
@@ -94,7 +98,6 @@ imgArray[23] = 'https://imagizer.imageshack.com/v2/150x100q90/923/P8DCWW.png';
               <h4 class="modal-title" id="user">Welcome User!</h4>
             </div>
             <div class="modal-body">
-              <h4>Scoreboard</h4>
   
               <table>
                 <tr>
