--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,20 +13,15 @@
     font-family: 'Retro';
     src: url(NineteenNinetySeven-11XB.ttf);
   }
-  * {
-    box-sizing: border-box;
-  }
-  *::before, *::after {
-    box-sizing: border-box;
-  }
+  
   html, body {
-    height: 100%;
     margin: 0;
     font-family: 'Retro';
     background: var(--backgroundColor);
   }
   .navbar{
     top: 0;
+    font-size: 30px;
     width: 100%;
     color: var(--colorShadeE);
     border: ridge 2px var(--colorShadeE);
@@ -38,12 +33,12 @@
       background-color: var(--colorShadeC);
 
       width: 70px;
-      height: 70px;
+      height: 80px;
       border: 2px dotted var(--colorShadeE);
       display: flex;
       justify-content: center;
       align-items: center;
-      font-size: 60px;
+      font-size: 70px;
       text-decoration: none;
   }
     .back:hover {
@@ -56,7 +51,7 @@
     }
 
   .menu{
-    height: 70px;
+    height: 80px;
     margin: 0px;
     width: 100%;
     display: flex;
@@ -64,16 +59,16 @@
     align-items: center;
   }
     .menu h1{
-      font-size: 20px;
+      font-size: 30px;
     }
 
   /*********************************************** intro/authentication.ejs ****************************************************/
 
    .prompt {
      font-family: sans-serif;
-    margin-top: 30px;
+    margin-top: 50px;
     color: white;
-    font-size: 18pt;
+    font-size: 30px;
     text-align: center;
   }
 
@@ -84,7 +79,7 @@
   #username{
     border: var(--colorShadeE) solid 3px;
     border-radius: 20px;
-    height: 5vh;
+    height: 3vh;
     outline: none;
   }
   #avatars{
@@ -99,14 +94,14 @@
       background-color: var(--colorShadeB);
       outline: none;
       overflow: hidden;
-      margin: 5px;
+      margin: 1vw;
       padding-left: 0.5%;
-      width: 80px;
-      height: 80px;
+      width: 100px;
+      height: 100px;
     }
     .avatar img{
-      width: 50px;
-      height: 50px;
+      width: 60px;
+      height: 60px;
     }
     .avatar:hover{
       background-color: var(--colorShadeA);
@@ -141,16 +136,15 @@
   /*********************************************** button  ****************************************************/
 
   .big-button {
-    width: 250px;
-    height: 50px;
-    margin: 10px;
+    width: 100%;
+    margin-top: 50px;
     position: relative;
     cursor: pointer;
     outline: none;
     border: 0;
     vertical-align: middle;
     text-decoration: none;
-    font-size: 15px;
+    font-size: 30px;
       color:var(--colorShadeA);
     font-weight: 700;
     text-transform: uppercase;
@@ -215,17 +209,19 @@
   #logo{
     text-align: center;
     width: 100%;
-    height: 50%;
-    top: 10px;
-    position : fixed;
+    height: 700%;
+    margin-top: 50px;
   }
+    #logo img{
+      width: 50%;
+    }
   #choose-mood{
     z-index: 1;
     display: flex;
     position: fixed;
     flex-direction: column;
     align-items: center;
-    margin-top: 20%;
+    margin-top: 30%;
   }
 
   #settings{
@@ -246,30 +242,8 @@
   }
   
   .setting img{
-      width: 80px;
-      height: 80px;
-  }
-
-  @media only screen and (max-width: 700px) {
-    .setting{
-      padding: 0px;
-      border-radius: 50%;
-      outline: none;
-      border: 2px solid var(--colorShadeA);
-      bottom: 0;
-      background: var(--colorShadeB);
-    }
-      .setting img{
-        width: 50px;
-        height: 50px;
-        border-radius: 50%;
-    }
-    .category{
-      width: 190px;
-    }
-    #categories{
-      width: 80%;
-    }
+      width: 150px;
+      height: 150px;
   }
   
   button.setting:hover {
@@ -277,6 +251,10 @@
     transform: translate(0, 0.375em);
   }
     /*********************************************** intro/index.ejs/modals ****************************************************/
+    .modal-dialog{
+      border: white 1px solid;
+      width: 1000px;
+    }
     .modal-content{
       color: white;
       font-family: 'Retro';
@@ -289,6 +267,7 @@
         }
       .modal-body{
         background-color: var(--colorShadeC);
+        font-size: 20px;
         font-family: sans-serif;
         display: flex;
         flex-direction: column;
@@ -307,16 +286,16 @@
   /*********************************************** intro/select.ejs ****************************************************/
 
 #category-page{
-  margin: 20px auto 30px auto;
+  top: 0;
   width: 100%;
-    font-size: 10px;
+    font-size: 20px;
     line-height: 1.6;
   display: flex;
           flex-direction: column;
           align-items: center;
-          justify-content: center;
 }
   #categories{
+    margin: 10px;
     padding: 2px;
     position: relative;
     width: 90%;
@@ -329,15 +308,14 @@
    
     .category{
       font-family: sans-serif;
-      margin: 2px;
       border: 1px var(--colorShadeE) solid; 
       border-left: none;
-      width: 250px;
-      height: 35px;
+      width: 600px;
+      height: 70px;
       display: flex;
       flex-direction: row;
       align-items: center;
-      font-size: 10px;
+      font-size: 20px;
       color: var(--colorShadeE); 
     }
      
@@ -375,6 +353,7 @@
 }
 
 form{
+  padding: 10px;
   background-color: var(--colorShadeA);
   display: flex;
   flex-direction: column;
@@ -387,16 +366,19 @@ fieldset{
   background-color: var(--backgroundColor);
   color: var(--colorShadeE);
   border: 2px solid var(--colorShadeE);
-  margin-top: 10px;
-  width:90%;
+  margin-top: 50px;
+  width:80%;
   border-radius: 20px;
 }
   fieldset .question{
     font-family: sans-serif;
-    font-size: 10px;
+    font-size: 20px;
 
   }
-
+  fieldset .choices{
+    font-family: sans-serif;
+    font-size: 17px;
+  }
   form .big-button{
     text-align: center;
   
@@ -450,4 +432,56 @@ fieldset{
   }
   #home-button{
     width: 100px;
+  }
+
+
+  @media only screen and (max-width: 900px) {
+    .modal-dialog{
+      margin-top: 10vh;
+      width: 400px;
+    }
+    .modal-body{
+      font-size: 15px;
+    }
+    .setting{
+      padding: 0px;
+      border-radius: 50%;
+      outline: none;
+      border: 2px solid var(--colorShadeA);
+      bottom: 0;
+      background: var(--colorShadeB);
+    }
+    .big-button {
+      font-size: 20px;
+    }
+      .setting img{
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+    }
+    #logo img{
+      width: 70%;
+    }
+    .category{
+      width: 300px;
+      height: 50px;
+      font-size: 12px;;
+    }
+    #categories{
+      width: 90%;
+    }
+     
+      .category img {
+          width: 20%;
+          background-color: rgb(143, 97, 219);
+        
+      }
+
+      fieldset .question{
+        font-size: 10px;
+    
+      }
+      fieldset .choices{
+        font-size: 8px;
+      }
   }
