--- a/views/intro/authentication.ejs
+++ b/views/intro/authentication.ejs
@@ -1,4 +1,5 @@
 <%- include('../partials/header') %>
+<script src="/index-login.js" defer></script>
 
   <script>
           //localStorage.clear();
@@ -41,6 +42,8 @@
       <button class="avatar" id="image-form">
         <input id="addAvatar" type="file" accept="image/*" capture="camera" title="Upload Avatar">
       </button>
+
+      <div id="my-login-button-target" />
 
     </div>
     
