--- a/views/intro/authentication.ejs
+++ b/views/intro/authentication.ejs
@@ -43,7 +43,7 @@
         <input id="addAvatar" type="file" accept="image/*" capture="camera" title="Upload Avatar">
       </button>
 
-      <div id="my-login-button-target" />
+      <div id="my-login-button-target"><div>
 
     </div>
     
