--- a/views/intro/authentication.ejs
+++ b/views/intro/authentication.ejs
@@ -45,7 +45,7 @@
 
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-      <div id="my-login-button-target"><div>
+      <div id="my-login-button-target">h<div>
 
     </div>
     
