--- a/views/intro/authentication.ejs
+++ b/views/intro/authentication.ejs
@@ -110,7 +110,7 @@ var loginButtonIconId = 'my-login-button-target';
 // Mount Login Button
 snap.loginkit.mountButton(loginButtonIconId, {
 clientId: '95f7eb87-b295-42bd-aed5-2126be35c87f', /*YOU CHANGE: Must be changed to the development client ID on snapckit*/
-redirectURI: 'http://localhost:3000/', /*YOU CHANGE: Must be changed to your glitch project's url AND added as the redirect URI on snapkit */
+redirectURI: 'https://otriviagame.herokuapp.com/', /*YOU CHANGE: Must be changed to your glitch project's url AND added as the redirect URI on snapkit */
 scopeList: [
   'user.display_name',
   'user.bitmoji.avatar',
