--- a/views/games/chill.ejs
+++ b/views/games/chill.ejs
@@ -67,7 +67,7 @@
 
     <% }) %> 
 
-    <button onclick='check()' class="big-button">Show</button>
+    <button style="margin: 0; margin-top:15px;" onclick='check()' class="big-button">Show</button>
 
     </form>
 </div>
