--- a/views/games/index.ejs
+++ b/views/games/index.ejs
@@ -104,7 +104,7 @@
     </script>
 
     <% }) %> 
-        <input class="big-button" type="submit" value="Submit">
+        <input style="margin: 0; margin-top:15px;" class="big-button" type="submit" value="Submit">
     </form>
 </div>
 
