--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -59,7 +59,7 @@
     align-items: center;
   }
     .menu h1{
-      font-size: 30px;
+      font-size: 25px;
     }
 
     #autherization-page{
@@ -149,7 +149,7 @@
 
   .big-button {
     width: 100%;
-    margin-top: 50px;
+    margin-bottom: 30px;
     position: relative;
     cursor: pointer;
     outline: none;
@@ -310,7 +310,7 @@
     margin: 10px;
     padding: 2px;
     position: relative;
-    width: 90%;
+    width: 60%;
     z-index: 1;
     display: flex;
       justify-content: center;
@@ -406,7 +406,10 @@ fieldset{
 
 /*********************************************** game/score.ejs ****************************************************/
 #scorepage{
+  border: black 1px solid;
+  height: 70vh;
   display: flex;
+  font-family: sans-serif;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
@@ -458,7 +461,7 @@ fieldset{
     }
     .modal-dialog{
       margin-top: 10vh;
-      width: 400px;
+      width: 350px;
     }
     .modal-body{
       font-size: 15px;
@@ -489,7 +492,7 @@ fieldset{
       font-size: 12px;;
     }
     #categories{
-      width: 90%;
+      width: 60%;
     }
      
       .category img {
@@ -504,5 +507,10 @@ fieldset{
       }
       fieldset .choices{
         font-size: 8px;
+      }
+
+      #new-score{
+        font-size: 15px;
+        width: 90%;
       }
   }
