--- a/views/games/score.ejs
+++ b/views/games/score.ejs
@@ -85,7 +85,7 @@
 
 <script>
 
-document.getElementById('useravatar').setAttribute('src', localStorage.getItem('avatar'));
+// document.getElementById('useravatar').setAttribute('src', localStorage.getItem('avatar'));
 
 
   Storage.prototype.setObj = function(key, obj) {
